Fix test length